# agience-flare-dkg-integration

./: .gitignore  DESIGN_BRIEF.md  LICENSE  README.md
.github/workflows/: ci.yml  publish-npm.yml  publish.yml
docs/: demo-recording-guide.md  demo-script.md  maintainer-statement.md  security-notes.md  vs-dkg-mcp-setup.md
npm-wrapper/: README.md  index.js  package.json
package/: .env.example  README.md  pyproject.toml  requirements-audit.txt
package/src/agience_dkg_integration/: __init__.py  _env.py  agience_client.py  cli.py  client.py  daemon_client.py  formatter.py  mcp_server.py  models.py
package/tests/integration/: test_integration.py
package/tests/unit/: test_agience_client.py  test_cli_governed.py  test_client.py  test_daemon_client.py  test_formatter.py  test_jsonld.py  test_mcp_server.py  test_models.py
registry/: entry-template.md
