[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agience-flare-dkg-integration"
version = "0.3.0"
description = "Governed authoring layer above DKG v10: commit-gated Agience artifacts, policy-controlled projection, FLARE confidentiality, typed agience: RDF Knowledge Assets."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Manoj Modhwadia", email = "manojmodhwadia@outlook.com" }
]

dependencies = [
  "httpx>=0.27",
  "pydantic>=2.0,<3",
  "typer>=0.12,<1",
  "python-dotenv>=1.0",
]

[project.urls]
Repository = "https://github.com/Muffinman75/agience-flare-dkg-integration"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
]

[project.scripts]
agience-dkg = "agience_dkg_integration.cli:app"
agience-dkg-mcp = "agience_dkg_integration.mcp_server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.envs.default]
dependencies = [
  "pytest>=8",
]
